--- a/frontend-dev/pre-artifacts/example-page-1.html
+++ b/frontend-dev/pre-artifacts/example-page-1.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title></title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Global css file -->
+<link rel="stylesheet" href="css/global.css">
+<!-- Global js file -->
+<script src="js/global.js"></script>
+<link rel="stylesheet" href="css/example-page-1.css" />
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-    <!-- Global css file -->
-    <link rel="stylesheet" href="css/global.css">
-
-    <!-- GLobal js file -->
-    <script src="js/global.js"></script>
+<!-- Some content here -->
 </head>
 <body>
+<!-- Some content here -->
+
 <h1>Example Page 1</h1>
 <h3>Some example content goes here</h3>
 
@@ -40,5 +40,7 @@
 </script>
 
 <script src="js/example-page-1.js"></script>
+
+<!-- Some content here -->
 </body>
 </html>
