--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- Global css file -->
-        <link rel="stylesheet" href="../frontend-dev/css/global.css">
+        <link rel="stylesheet" href="../fe-dev/css/global.css">
 
         <!-- Page specific css file -->
-        <link rel="stylesheet" href="../frontend-dev/css/page.css">
+        <link rel="stylesheet" href="../fe-dev/css/page.css">
     </head>
     <body>
         <!--[if lt IE 7]>
