--- a/rjs-output/js/src/rjs-output/index.html
+++ b/rjs-output/js/src/rjs-output/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="css/global.css">
 
         <!-- Page specific css file -->
-        <!--<link rel="stylesheet" href="../fe-dev/css/page.css">-->
+        <link rel="stylesheet" href="css/page.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -37,9 +37,9 @@
         </script>
 
         <!-- Globally included javascript vendor file(s) -->
-        <!--<script src="js/vendors.js"></script>-->
+        <script src="js/vendors.js"></script>
 
         <!-- Page specific javascript -->
-        <!--<script src="js/page-script.js"></script>-->
+        <script src="js/page-script.js"></script>
     </body>
 </html>
