Moved require js build config to yaml file and setup running requirejs as a node module (may not stay that way later).

--- a/rjs-output/amd-require-js.html
+++ b/rjs-output/amd-require-js.html
@@ -9,7 +9,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/amd-require-js.css">
+        <link rel="stylesheet" href="css/amd.css">
     </head>
     <body>
         <!--[if lt IE 9]>
@@ -56,7 +56,7 @@
         </script>
 
         <!-- Global Entry Point -->
-        <script src="/js/amd-require-js.js"></script>
+        <script src="/js/amd.js"></script>
 
     </body>
 </html>
