Added nodemon to package.json.  Added some more mock requirejs application scaffolding.

--- a/fe-dev/amd.html
+++ b/fe-dev/amd.html
@@ -25,7 +25,7 @@
                 <h1>Amd Require Js Page</h1><hr />
             </header>
             <nav>
-                <ul>
+                <ul class="horiz-menu">
                     <li><a href="#link-1"><span>Link 1</span></a></li>
                     <li><a href="#link-2"><span>Link 2</span></a></li>
                     <li><a href="#link-3"><span>Link 3</span></a></li>
@@ -56,7 +56,7 @@
         </script>
 
         <!-- Global Entry Point -->
-        <script src="js/require.js" data-main="js/amd/init.js"></script>
+        <script src="js/vendors/require.js" data-main="js/amd/init.js"></script>
 
     </body>
 </html>
